# chat

./: .gitignore  CMakeLists.txt
include/: ChatBubble.h  ChatWindow.h  LaTeXLabel.h
src/: main.cpp
src/ui/: ChatBubble.cpp  ChatWindow.cpp  LaTeXLabel.cpp
